Add  TINY_MCE, Text editor | Question Form

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
+
+TINY_MCE='wqiqwbrdya396l5hc1gh4igsvp6ufeb83wmywygcn87w736c'
