Add Mongoose connection and createQuestion action

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "lucide-react": "^0.336.0",
+    "mongoose": "^8.2.0",
+    "moongoose": "^0.0.5",
     "next": "13.5.4",
     "prettier": "^3.0.3",
     "react": "^18",
