--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
+MONGO_URL='mongodb+srv://misterharshkumar:devoverflow@nextjs.fipqyxh.mongodb.net/?retryWrites=true&w=majority&appName=Nextjs'
