--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 MONGO_URL='mongodb+srv://misterharshkumar:devoverflow@nextjs.fipqyxh.mongodb.net/?retryWrites=true&w=majority&appName=Nextjs'
+
+CLERK_WEBHOOK_SECRET=whsec_GuSEb7RLG2IvWguJZZpUrd2dRQD/Ng7K
