--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "app",
+  "name": "nextjs14-devoverflow",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,17 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.3",
+    "@clerk/nextjs": "^4.26.1",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
     "@tinymce/tinymce-react": "^4.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -33,7 +29,6 @@
     "next": "14.0.1",
     "prettier": "^3.0.3",
     "prismjs": "^1.29.0",
-    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
@@ -44,9 +39,9 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.8.9",
-    "@types/prismjs": "^1.26.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/prismjs": "^1.26.2",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
