--- a/package.json
+++ b/package.json
@@ -9,32 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.26.1",
+    "@clerk/nextjs": "^4.28.1",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@tinymce/tinymce-react": "^4.3.0",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@tailwindcss/typography": "^0.5.10",
+    "@tinymce/tinymce-react": "^4.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "html-react-parser": "^5.0.2",
-    "lucide-react": "^0.290.0",
-    "mongodb": "^6.2.0",
-    "mongoose": "^7.6.3",
-    "next": "14.0.1",
-    "prettier": "^3.0.3",
+    "html-react-parser": "^5.0.11",
+    "lucide-react": "^0.299.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
+    "next": "14.0.4",
+    "prettier": "^3.1.1",
     "prismjs": "^1.29.0",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.47.0",
-    "svix": "^1.21.0",
-    "tailwind-merge": "^2.0.0",
+    "react-hook-form": "^7.49.2",
+    "svix": "^1.15.0",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
