--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
+    "npm-check-updates": "^16.14.17",
     "prettier": "^3.1.1",
     "prismjs": "^1.29.0",
     "query-string": "^8.1.0",
